--- a/crisis.html
+++ b/crisis.html
@@ -36,18 +36,33 @@
 </header>
 <main id="main" tabindex="-1">
 
-<section class="section">
+<section class="section crisis-hero">
   <div class="container">
-    <h1 class="h1">Get help now</h1>
-    <p class="lead">If you’re in immediate danger, call <strong>000</strong>.</p>
-    <div class="card" style="display:grid; gap:16px;">
-      <a class="btn btn-primary" href="tel:000">Call 000</a>
-      <a class="btn btn-secondary" href="tel:131114">Lifeline 13 11 14</a>
-      <a class="btn btn-secondary" href="tel:1800551800">Kids Helpline 1800 55 1800</a>
-      <a class="btn btn-secondary" href="tel:1300224636">Beyond Blue 1300 22 4636</a>
-    </div>
-    <div class="card" style="margin-top:var(--space-4)">
-      <p>This site only lists information about services. It does not provide medical advice, diagnosis, referrals, or endorsements.</p>
+    <div class="card crisis-card">
+      <div class="crisis-icon" aria-hidden="true">⚠️</div>
+      <h1 class="h1">Need Help Right Now?</h1>
+      <p class="lead">If you're in immediate danger or having thoughts of self-harm, please reach out for help immediately.</p>
+
+      <div class="crisis-contacts">
+        <a href="tel:000" class="crisis-contact">
+          <div class="icon">📞</div>
+          <div><span class="label">Emergency</span><br><strong>000</strong></div>
+        </a>
+        <a href="tel:131114" class="crisis-contact">
+          <div class="icon">📞</div>
+          <div><span class="label">Lifeline</span><br><strong>13 11 14</strong></div>
+        </a>
+        <a href="tel:1800551800" class="crisis-contact">
+          <div class="icon">👶</div>
+          <div><span class="label">Kids Helpline</span><br><strong>1800 55 1800</strong></div>
+        </a>
+        <a href="tel:1300224636" class="crisis-contact">
+          <div class="icon">💬</div>
+          <div><span class="label">Beyond Blue</span><br><strong>1300 22 4636</strong></div>
+        </a>
+      </div>
+
+      <a href="services.html" class="btn btn-crisis-outline btn-block" style="margin-top:24px;">🌐 Find More Crisis Support</a>
     </div>
   </div>
 </section>
